style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
}

body {
  font-family: 'Roboto', sans-serif;
  display: grid;
  grid-template-columns: minmax(220px, 1fr) 6fr;
  grid-template-rows: minmax(150px, 1fr) 5fr;
  height: 100vh;
}

.sidebar {
  grid-row: 1 / 3;
  grid-column: 1;
  background-color: #217dd9;
  color: white;
  display: grid;
  gap: 32px;
  grid-template-rows: 80px 250px 64px;
}

.logo {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  padding-left: 1rem;
}

.sidebar ul {
  list-style-type: none;
  display: grid;
  gap: 1rem;
  padding-left: 1.5rem;
}

.nav li,
.settings li {
  display: flex;
  align-items: center;
  gap: 1rem;
  font-weight: 700;
}

.header {
  grid-row: 1;
  grid-column: 2;
}

.container {
  width: 90%;
  margin: 0 auto;
  /* margin-top: 20px; */
  height: 90%;
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: 1fr 1fr;
  align-items: center;
}

form {
  grid-column: 1;
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

input {
  width: 80%;
  background-color: #ddd;
  border-radius: 100px;
  outline: none;
  border: none;
  padding: 10px 20px;
  font-family: inherit;
  font-size: 1rem;
}

.info {
  grid-column: 2;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.profile-pic {
  width: 10%;
  border: 1px solid black;
  border-radius: 50%;
}

.user-info {
  grid-column: 1;
  display: flex;
  align-items: center;
  gap: 1rem;
}

.user-pic {
  width: 7%;
  border: 2px solid black;
  border-radius: 50%;
}

.buttons {
  grid-column: 2;
  display: flex;
  gap: 30px;
}

.btn {
  background-color: #217dd9;
  color: white;
  outline: none;
  border: none;
  width: 90px;
  padding: 0.7rem 0;
  border-radius: 100px;
  font-weight: bold;
}

.main {
  grid-row: 2;
  grid-column: 2;
  background-color: #ddd;
  box-shadow: 0 0 5px #999;
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-rows: 1fr 1fr;
}

.projects {
  grid-row: span 2;
}

.projects h3 {
  padding: 20px 20px 0 20px;
}

.project-grid {
  height: 90%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(3, 1fr);
  gap: 20px;
  padding: 20px;
}

.card {
  background-color: #fff;
  border-radius: 10px;
  border-left: 10px solid #fb9e0b;
  box-shadow: 0 0 5px #999;
  padding: 1.5rem;
  display: grid;
  grid-template-rows: 1fr 3fr 1fr;
  gap: 1rem;
}

.icons ul {
  display: flex;
  gap: 1rem;
  justify-content: flex-end;
  grid-row: 3;
}

.icons li {
  list-style-type: none;
}

.announcements,
.trending {
  padding: 20px;
}

.announcements-grid,
.trending-grid {
  background-color: #fff;
  padding: 1.5rem;
  border-radius: 10px;
  box-shadow: 0 0 5px #999;
  margin-top: 20px;
  display: grid;
  gap: 1rem;
}

.profile {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.profile img {
  width: 60px;
  height: 60px;
  padding: 3px;
  border: 1px solid black;
  border-radius: 50%;
}

